--- a/.github/workflows/master_loyalist-internship-demo.yml
+++ b/.github/workflows/master_loyalist-internship-demo.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'loyalist-internship-demo'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A1B3F9DBD4914937B935A4A7DD99BB7C }}
-          package: '*.jar'
+          package: '*.war'
