--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <display-name>Login Demo</display-name>
 
     <welcome-file-list>
-        <welcome-file>login.do</welcome-file>
+        <welcome-file>index.do</welcome-file>
     </welcome-file-list>
 
 </web-app>
