--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
 			<version>3.0.2</version>
 		</dependency>
 
+		<!-- add the JDBC Driver -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>8.2.2.jre8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
