--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.compositeapps</groupId>
-	<artifactId>idqlogindemo</artifactId>
+	<groupId>com.loyalist</groupId>
+	<artifactId>khupragenics</artifactId>
 	<version>1.0.0</version>
 	<packaging>war</packaging>
 
@@ -15,12 +15,12 @@
 			<artifactId>javaee-web-api</artifactId>
 			<version>6.0</version>
 			<scope>provided</scope>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
@@ -112,6 +112,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>khupragenics</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
