--- a/src/main/resources/authentication.properties
+++ b/src/main/resources/authentication.properties
@@ -8,7 +8,7 @@ aad.postSignOutFragment=?post_logout_redirect_uri=
 
 # app.homePage is by default set to dev server address and app context path on the server
 # for apps deployed to azure, use https://your-sub-domain.azurewebsites.net
-app.homePage=https://loyalist-internship-demo-webapp.azurewebsites.net/idqlogindemo-1.0.0/login.jsp
+app.homePage=https://loyalist-internship-demo-webapp.azurewebsites.net/khupragenics/homepage.jsp
 
 # endpoint for AAD redirect. Configured this to be the same as the URL pattern for AADRedirectServlet.java
 app.redirectEndpoint=
