--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>khupragenics</finalName>
+		<finalName>ROOT</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
