--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
-	
+
 
 	<dependencies>
 		<!--<dependency>
@@ -127,7 +127,7 @@
 
 	<build>
 
-		<finalName>ROOT</finalName>
+		<!--<finalName>ROOT</finalName>-->
 		<pluginManagement>
 			<plugins>
 				<plugin>
